# scrape-cascade

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sample_domains.txt
.github/workflows/: tests.yml
references/: probe-pitfalls.md
rubrics/: b2b_saas.yaml  dead_or_parked_domain.yaml  ecommerce_store.yaml  hiring_signal.yaml
scripts/: ats_api.py  cascade.py  run.py  ssr_json.py
tests/: test_adp_icims_ats.py  test_ats_api.py  test_ats_postings.py  test_ats_utility_url.py  test_browser_rescue.py  test_careers_discovery.py  test_evidence_validation.py  test_fetch_guards.py  test_followup_pass.py  test_judge.py  test_malformed_host_isolation.py  test_page_discovery.py  test_proxy_routing.py  test_run.py  test_ssr_json.py  test_workday_ats.py
