[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scrape-cascade"
version = "0.1.0"
description = "Free-first, tiered web scraping + page classification at scale — httpx → Jina → Playwright → Camoufox → local LLM-CLI judge, config-driven by YAML rubrics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alejandro Rubio" }]
keywords = ["scraping", "web-classification", "playwright", "camoufox", "llm", "crawler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

# --- Tier 1 (fast pass) + judge: the minimal free core ---
dependencies = [
    "httpx[http2]>=0.24",
    "html2text>=2020.1.16",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
    'curl_cffi>=0.7; python_version >= "3.10"',
]

[project.optional-dependencies]
# Tier 2/3 browser rescue — only needed with --rescue / --stealth.
# After install: `playwright install chromium` and `python -m camoufox fetch`.
browser = [
    "playwright>=1.40",
    "camoufox>=0.4",
    "selenium>=4.10",
    "undetected-chromedriver>=3.5",
]
analysis = ["pandas>=2.0"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/alerubbio/scrape-cascade"
Repository = "https://github.com/alerubbio/scrape-cascade"

# The engine ships as four flat modules under scripts/ (sibling imports). Map that dir
# as the package root so `import cascade` resolves both when installed and when run
# directly with `python scripts/run.py`.
[project.scripts]
scrape-cascade = "run:main"

[tool.setuptools]
package-dir = { "" = "scripts" }
py-modules = ["cascade", "run", "ats_api", "ssr_json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
